# simple-app

./: .dockerignore  Dockerfile  Procfile  README.md  app.json  docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt  run_local.py  task.md  validate_setup.py
backend/: __init__.py  main.py
backend/models/: __init__.py  chat_models.py
backend/services/: __init__.py  groq_service.py
backend/utils/: __init__.py  config.py
frontend/: __init__.py  app.py
frontend/components/: __init__.py  chat_interface.py
